syntax = "proto3";

option go_package = "./;passman";
package passman;

message GetReq {
  uint64 UserID = 1;
  string ServiceName = 2;
}

message Credentials {
  string Login = 1;
  string Password = 2;
}

message ServiceCredentials {
  string ServiceName = 1;
  string Login = 2;
  string Password = 3;
}

service PassmanService {
  rpc GetCredentials(GetReq) returns (ServiceCredentials) {}
}